--- a/blog1_withNoFramework/package.json
+++ b/blog1_withNoFramework/package.json
@@ -7,7 +7,8 @@
     "cross-env": "^7.0.2",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.4",
-    "redis": "^3.0.2"
+    "redis": "^3.0.2",
+    "xss": "^1.0.8"
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
